--- a/Reportit-FE/Includes/form.html
+++ b/Reportit-FE/Includes/form.html
@@ -6,8 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Send a report!</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-       
-        <link rel="stylesheet" type="text/css" media="screen" href="../general.css" />
+    
         <link rel="stylesheet" type="text/css" media="screen" href="../CSS/form.css"/>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> <!--JQ-->
@@ -32,7 +31,7 @@
                             <img src="../Images/reporticon.png" alt="reporticon"/>
                         </div>
                         <form id="contactForm">
-                            <h3>Just one more step and you're done!</h3>
+                            <h3>For further status about your report</h3>
                            <div  class="row">
                                 <div class="col-md-10">
                                     <p style="font-weight: bold; text-decoration: underline">please fill in the following form:</p>
@@ -49,7 +48,7 @@
                                         <input type="text" name="txtCity" class="form-control" placeholder="Your city *" value="" />
                                     </div>
                                     <div class="form-group">
-                                        <input type="submit" name="btnSubmit" class="btnContact" value="Send your report!" />
+                                        <input type="submit" name="btnSubmit" class="btnContact" value="Get Status" />
                                     </div>
                                 </div>
                                 
