--- a/Reportit-FE/Includes/FAQ.htm
+++ b/Reportit-FE/Includes/FAQ.htm
@@ -25,6 +25,7 @@
     <!--  Custom Jquery -->
     <script src="../js/script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 </head>
 
@@ -66,7 +67,7 @@
 
     </script>
     <div class="jquery-script-clear"></div>
-    <h1 class="page-title2">FAQ</h1>
+    <h1 >FAQ</h1>
     <div id="container">
         <ul class="faq">
             <li class="q"><img src="../images/arrow.png">What is ReportIT? </li>
@@ -92,15 +93,13 @@
         <div class="row ncolor">
             <div class="col-md-12">
             <a href="tel:03-6013601"><i class="fa fa-phone fa-4x" aria-hidden="true"></i></a>
-            <button class="info" onclick="myFunction()"><img src="../Images/info.png" height="50px" width="50px"></button>
+            <button class="info" onclick="myFunction()"><img src="../Images/info 2.png" height="50px" width="50px"></button>
           </div>
         </div>
     </footer>
     <script>
         function myFunction() {
-            alert("Our Team is dedicated to making the world a safer place with ReportIt an easy reporting system! Any citizen that uses the system understands the magic Behind it");
-        }
-
+            swal("💻Our Team💻", "Dedicated team for making the world a safer place with ReportIt an easy reporting system!", "success")}
     </script>
 </body>
 
