--- a/Reportit-FE/Includes/FAQ.htm
+++ b/Reportit-FE/Includes/FAQ.htm
@@ -71,20 +71,20 @@
     <div id="container">
         <ul class="faq">
             <li class="q"><img src="../images/arrow.png">What is ReportIT? </li>
-            <li class="a">Reportit for a safer world - make municipal reporting much easier</li>
-            <li class="q"><img src="../images/arrow.png">Who is the user of ReportIT?</li>
-            <li class="a">We have 2 kind of users<br>
-                City Services Police and Fire Department<br>
+            <li class="a">Reportit is used for making the world safer - making municipal reporting much easier</li>
+            <li class="q"><img src="../images/arrow.png">Who is ReportIt for?</li>
+            <li class="a">We have 2 kinds of users<br>
+                Municipal Services, Police and Firefighting Departments<br>
                 Any concerned citizen
             </li>
             <li class="q"><img src="../images/arrow.png">Accessibility</li>
             <li class="a">Any device with internet access</li>
             <li class="q"><img src="../images/arrow.png"> Which browsers are supported on the site?</li>
-            <li class="a">Microsoft Edge,Firefox, Chrome and Safari.</li>
-            <li class="q"><img src="../images/arrow.png">Why you will need this service</li>
-            <li class="a">Today the world is digital and therefore all the most basic activities are done through the Phone or computer. This is why all the municipal services should integrate these tools to become more efficient and improve their service</li>
+            <li class="a">Microsoft Edge, Firefox, Chrome and Safari.</li>
+            <li class="q"><img src="../images/arrow.png">Why will you need this service?</li>
+            <li class="a">Today the world is digital and therefore all the most basic activities are done through a phone or a computer. Which is why all the municipal services should integrate these tools, to become more efficient and improve their services</li>
             <li class="q"><img src="../images/arrow.png">How does it work?</li>
-            <li class="a">Any citizen can use our service and report on a hazard, take simple picture and uploud to our website and the magic happens- our smart AI image recognizer mark the hazard and report about it to the relevent department. In addition if the citizen wants to know about the hazard status he can get it via mail if he choses to.</li>
+            <li class="a">Anyone can use our service and report a hazard, just take a simple picture, uploud to our website and that's when the magic happens - our smart AI image recognizer marks the hazard and reports it to the relevent department. In addition, if the citizen wants to get a status update regarding the hazard, they can get it via mail.</li>
         </ul>
     </div>
 
@@ -99,7 +99,7 @@
     </footer>
     <script>
         function myFunction() {
-            swal("💻Our Team💻", "Dedicated team for making the world a safer place with ReportIt an easy reporting system!", "success")}
+            swal("💻Our Team💻", "Dedicated to making the world a safer place. ReportIt - an easy reporting system!" ,"success")}
     </script>
 </body>
 
