--- a/Reportit-FE/CSS/style.css
+++ b/Reportit-FE/CSS/style.css
@@ -27,6 +27,10 @@ i {
     
 }
 
+.control-label{
+    float: center;
+    text-align: center;
+}
 
 #logoImg {
     display: block;
@@ -196,18 +200,71 @@ footer {
 
 #map {
     height: 600px;
-    /* The height is 400 pixels */
     width: 100%;
-    /* The width is the width of the web page */
     margin-bottom: 60px;
 }
-#cancelBtn{
-    background-color: red;
-    text-align: right;
+
+#button {
+    display: inline-block;
+    padding: 15px 25px;
+    font-size: 24px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    background-color: #4CAF50;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 9px #999;
+  }
+  
+  #button:hover {background-color: #3e8e41}
+
+  #button:active {
+    background-color: #3e8e41;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+  }
+
+  #buttonC {
     float: right;
-}
-#sendBtn{
-    background-color: 0E1D70;
+    padding: 15px 25px;
+    font-size: 24px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    background-color:red;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 9px #999;
+  }
+  #buttonC:hover {background-color: red}
 
-}
+  #buttonC:active {
+    background-color: red;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+  }
 
+.btn-file input[type=file]{
+    position: relative;
+    overflow: hidden;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
+}
