--- a/Reportit-FE/Includes/FAQ.htm
+++ b/Reportit-FE/Includes/FAQ.htm
@@ -40,13 +40,13 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav mr-auto col-sm-3 col-md-3">
                 <li class="nav-item">
-                    <a class="nav-link" href="../index.html"><i class="fa fa-home fa-2x" aria-hidden="true"> Home</i></a>
+                    <a class="nav-link" href="../index.html"><i class="fa fa-home fa-4x" aria-hidden="true"> Home</i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="mailto:contact@reportit.com"><i class="fa fa-envelope fa-2x"> Mail</i></a>
+                    <a class="nav-link" href="mailto:contact@reportit.com"><i class="fa fa-envelope fa-4x"> Contact</i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/include/faq.htm"><i class="fa fa-question fa-2x"> FAQ</i></a>
+                    <a class="nav-link" href="/include/faq.htm"><i class="fa fa-question fa-4x"> FAQ</i></a>
                 </li>
             </ul>
         </div>
