--- a/Reportit-FE/Includes/FAQ.htm
+++ b/Reportit-FE/Includes/FAQ.htm
@@ -46,7 +46,7 @@
                     <a class="nav-link" href="mailto:contact@reportit.com"><i class="fa fa-envelope fa-4x"> Contact</i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/include/faq.htm"><i class="fa fa-question fa-4x"> FAQ</i></a>
+                    <a class="nav-link" href=""><i class="fa fa-question fa-4x"> FAQ</i></a>
                 </li>
             </ul>
         </div>
@@ -67,23 +67,22 @@
 
     </script>
     <div class="jquery-script-clear"></div>
-    <h1 >FAQ</h1>
     <div id="container">
         <ul class="faq">
-            <li class="q"><img src="../images/arrow.png">What is ReportIT? </li>
+            <li class="q"><img src="../images/arrow.png" width="50" height="50">&emsp; What is ReportIT? </li>
             <li class="a">Reportit is used for making the world safer - making municipal reporting much easier</li>
-            <li class="q"><img src="../images/arrow.png">Who is ReportIt for?</li>
+            <li class="q"><img src="../images/arrow.png" width="50" height="40">&emsp; Who is ReportIt for?</li>
             <li class="a">We have 2 kinds of users<br>
                 Municipal Services, Police and Firefighting Departments<br>
                 Any concerned citizen
             </li>
-            <li class="q"><img src="../images/arrow.png">Accessibility</li>
+            <li class="q"><img src="../images/arrow.png" width="50" height="40">&emsp; Accessibility</li>
             <li class="a">Any device with internet access</li>
-            <li class="q"><img src="../images/arrow.png"> Which browsers are supported on the site?</li>
+            <li class="q"><img src="../images/arrow.png" width="50" height="40">&emsp; Which browsers are supported on the site?</li>
             <li class="a">Microsoft Edge, Firefox, Chrome and Safari.</li>
-            <li class="q"><img src="../images/arrow.png">Why will you need this service?</li>
+            <li class="q"><img src="../images/arrow.png" width="50" height="40">&emsp; Why will you need this service?</li>
             <li class="a">Today the world is digital and therefore all the most basic activities are done through a phone or a computer. Which is why all the municipal services should integrate these tools, to become more efficient and improve their services</li>
-            <li class="q"><img src="../images/arrow.png">How does it work?</li>
+            <li class="q"><img src="../images/arrow.png" width="50" height="40">&emsp; How does it work?</li>
             <li class="a">Anyone can use our service and report a hazard, just take a simple picture, uploud to our website and that's when the magic happens - our smart AI image recognizer marks the hazard and reports it to the relevent department. In addition, if the citizen wants to get a status update regarding the hazard, they can get it via mail.</li>
         </ul>
     </div>
