--- a/Reportit-FE/Includes/FAQ.htm
+++ b/Reportit-FE/Includes/FAQ.htm
@@ -30,28 +30,26 @@
 </head>
 
 <body>
-    <!-- menu navbar -->
-   
-    <nav class="navbar  navbar-expand-lg navbar-inverse navbar-dark ncolor">
-        <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <!-- Menu navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark ncolor">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
-
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav mr-auto col-sm-3 col-md-3">
-                <li class="nav-item">
-                    <a class="nav-link" href="../index.html"><i class="fa fa-home fa-4x" aria-hidden="true"> Home</i></a>
+        <div class="collapse navbar-collapse " id="collapsibleNavbar">
+            <ul class="navbar-nav mr-auto col-sm-3 col-md-3 ">
+                <li class="nav-item ">
+                    <a class="nav-link " href="../index.html"><i class="fa fa-home fa-3x">&nbsp;&nbsp;Home</i></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="mailto:contact@reportit.com"><i class="fa fa-envelope fa-4x"> Contact</i></a>
+                <li class="nav-item ">
+                    <a class="nav-link " href="mailto:contact@reportit.com"><i class="fa fa-envelope fa-3x">&nbsp;&nbsp;Contact</i></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href=""><i class="fa fa-question fa-4x"> FAQ</i></a>
+                <li class="nav-item ">
+                    <a class="nav-link" href=""><i class="fa fa-question fa-3x">&nbsp;&nbsp;&nbsp;&nbsp;FAQ</i></a>
                 </li>
             </ul>
         </div>
     </nav>
-    <!-- end navbar -->
+    <!-- End navbar -->
 
     <!-- content -->
     <div id="google_translate_element"></div>
@@ -71,18 +69,18 @@
         <ul class="faq">
             <li class="q"><img src="../images/arrow.png" width="50" height="50">&emsp; What is ReportIT? </li>
             <li class="a">Reportit is used for making the world safer - making municipal reporting much easier</li>
-            <li class="q"><img src="../images/arrow.png" width="50" height="40">&emsp; Who is ReportIt for?</li>
+            <li class="q"><img src="../images/arrow.png" width="50" height="50">&emsp; Who is ReportIt for?</li>
             <li class="a">We have 2 kinds of users<br>
                 Municipal Services, Police and Firefighting Departments<br>
                 Any concerned citizen
             </li>
-            <li class="q"><img src="../images/arrow.png" width="50" height="40">&emsp; Accessibility</li>
+            <li class="q"><img src="../images/arrow.png" width="50" height="50">&emsp; Accessibility</li>
             <li class="a">Any device with internet access</li>
-            <li class="q"><img src="../images/arrow.png" width="50" height="40">&emsp; Which browsers are supported on the site?</li>
+            <li class="q"><img src="../images/arrow.png" width="50" height="50">&emsp; Which browsers are supported on the site?</li>
             <li class="a">Microsoft Edge, Firefox, Chrome and Safari.</li>
-            <li class="q"><img src="../images/arrow.png" width="50" height="40">&emsp; Why will you need this service?</li>
+            <li class="q"><img src="../images/arrow.png" width="50" height="50">&emsp; Why will you need this service?</li>
             <li class="a">Today the world is digital and therefore all the most basic activities are done through a phone or a computer. Which is why all the municipal services should integrate these tools, to become more efficient and improve their services</li>
-            <li class="q"><img src="../images/arrow.png" width="50" height="40">&emsp; How does it work?</li>
+            <li class="q"><img src="../images/arrow.png" width="50" height="50">&emsp; How does it work?</li>
             <li class="a">Anyone can use our service and report a hazard, just take a simple picture, uploud to our website and that's when the magic happens - our smart AI image recognizer marks the hazard and reports it to the relevent department. In addition, if the citizen wants to get a status update regarding the hazard, they can get it via mail.</li>
         </ul>
     </div>
