--- a/Reportit-FE/CSS/FaqCustom.css
+++ b/Reportit-FE/CSS/FaqCustom.css
@@ -1,6 +1,6 @@
 h1 {
     text-align: center;
-    font-family: "Comic Sans MS";
+    font-family: 'Saira Semi Condensed', sans-serif;
     color: black;
     text-align: center;
     font-weight: bold;
@@ -13,7 +13,7 @@ h1 {
     padding: 0;
 }
 body {
-    font-family: 'roboto', sans-serif;
+    font-family:'Saira Semi Condensed', sans-serif;
     color: white;
     font-size: 16px;
     background: #f9f9f9;
