--- a/Reportit-FE/CSS/style.css
+++ b/Reportit-FE/CSS/style.css
@@ -14,7 +14,7 @@ body {
     font-weight: 600;
     text-align: center;
     margin: 0, auto;
-    padding-top: 100px;
+    padding-top: 10%;
     font-family: 'Saira Semi Condensed', sans-serif;
 }
 #fonti {
