--- a/Reportit-FE/CSS/style.css
+++ b/Reportit-FE/CSS/style.css
@@ -220,7 +220,7 @@ footer {
     margin-bottom: 60px;
 }
 
-#button {
+#submitForm {
     display: inline-block;
     padding: 8px 18px;
     font-size: 24px;
@@ -235,9 +235,9 @@ footer {
     box-shadow: 0 9px #999;
   }
   
-  #button:hover {background-color: #3e8e41}
+  #submitForm:hover {background-color: #3e8e41}
 
-  #button:active {
+  #submitForm:active {
     background-color: #3e8e41;
     box-shadow: 0 5px #666;
     transform: translateY(4px);
